Fix: cleanup code
