# cmd/api/handler/auth.go
@@ -5,12 +5,13 @@ import (
 	"fmt"
 	"net/http"
 
+	"github.com/go-chi/chi/v5"
+	"github.com/go-chi/render"
+
 	"github.com/ew0s/trade-bot/internal/api/request"
 	"github.com/ew0s/trade-bot/internal/api/response"
 	"github.com/ew0s/trade-bot/pkg/constant"
 	"github.com/ew0s/trade-bot/pkg/httputils/baseresponse"
-	"github.com/go-chi/chi/v5"
-	"github.com/go-chi/render"
 )
 
 type UserAuthService interface {
@@ -51,9 +52,9 @@ func (h *Auth) Routes() chi.Router {
 // @Accept       json
 // @Param        input  body  request.SignUp  true  "account info"
 // @Success      201    "successfully create user"
-// @Header       201    {string}  Location               "user uid"
-// @Failure      400    {object}  httputils.ErrResponse  "bad request"
-// @Failure      500    {object}  httputils.ErrResponse  "internal server error"
+// @Header       201    {string}  Location                  "user uid"
+// @Failure      400    {object}  baseresponse.ErrResponse  "bad request"
+// @Failure      500    {object}  baseresponse.ErrResponse  "internal server error"
 // @Router       /auth/sign-up [post]
 func (h *Auth) SignUp(w http.ResponseWriter, r *http.Request) {
 	var req request.SignUp
@@ -79,12 +80,11 @@ func (h *Auth) SignUp(w http.ResponseWriter, r *http.Request) {
 // @ID           sign-in-user
 // @Accept       json
 // @Produce      json
-// @Param        uid    path      string                 true  "user uid"
-// @Param        input  body      request.SignIn         true  "credentials"
-// @Success      200    {object}  response.SignIn        "access token"
-// @Failure      400    {object}  httputils.ErrResponse  "bad request"
-// @Failure      404    {object}  httputils.ErrResponse  "not found"
-// @Failure      500    {object}  httputils.ErrResponse  "internal server error"
+// @Param        uid    query     string                    true  "user uid"
+// @Param        input  body      request.SignIn            true  "credentials"
+// @Success      200    {object}  response.SignIn           "access token"
+// @Failure      400    {object}  baseresponse.ErrResponse  "bad request"
+// @Failure      500    {object}  baseresponse.ErrResponse  "internal server error"
 // @Router       /auth/sign-in [post]
 func (h *Auth) SignIn(w http.ResponseWriter, r *http.Request) {
 	var req request.SignIn
@@ -109,9 +109,9 @@ func (h *Auth) SignIn(w http.ResponseWriter, r *http.Request) {
 // @Description  method stands for logging out user
 // @ID           logout-user
 // @Success      204  "ok"
-// @Failure      400  {object}  httputils.ErrResponse  "bad request"
-// @Failure      404  {object}  httputils.ErrResponse  "not found"
-// @Failure      500  {object}  httputils.ErrResponse  "internal server error"
+// @Failure      400  {object}  baseresponse.ErrResponse  "bad request"
+// @Failure      404  {object}  baseresponse.ErrResponse  "not found"
+// @Failure      500  {object}  baseresponse.ErrResponse  "internal server error"
 // @Router       /auth/logout [delete]
 func (h *Auth) Logout(w http.ResponseWriter, r *http.Request) {
 	var req request.Logout
